# GPU_algebra

code/: .clangd  CMakeLists.txt
code/.devcontainer/: Dockerfile  devcontainer.json
code/include/gvec/: utils.h  vec.h
code/src/gvec/: CMakeLists.txt  vec.cu
code/tests/gvec/: CMakeLists.txt  vecTests.cpp
